--- a/imgfetch/.gitignore
+++ b/imgfetch/.gitignore
@@ -5,6 +5,8 @@
 /tmp
 /out-tsc
 /bazel-out
+/integration/bazel/bazel-*
+*.log
 
 # Node
 /node_modules
@@ -36,6 +38,25 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+pubspec.lock
+.devcontainer/*
+!.devcontainer/README.md
+!.devcontainer/recommended-devcontainer.json
+!.devcontainer/recommended-Dockerfile
+*.swo
+*.swp
+modules/.settings
+modules/.vscode
+.vimrc
+.nvimrc
+*secret.js
+.build-analytics
+/modules/rollup-test/dist/
+.bazelrc.user
+.ng-dev.user*
+.notes.md
+baseline.json
+.husky/_
 
 # System files
 .DS_Store
